--- a/Blog_Api_ElNucleo/appsettings.json
+++ b/Blog_Api_ElNucleo/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "SQLconnet": "Server=SELIN-LGONZALEZ;Database=datosBlog;User=LarryGonzalez;Password=ci11159753;Trusted_Connection=True;Encrypt=False;"
+    "SQLconnet":
   },
   "Logging": {
     "LogLevel": {
